fix(resource): items slide under sticky header column and row dark mode

--- a/ui/src/css/calendar-resource.sass
+++ b/ui/src/css/calendar-resource.sass
@@ -162,19 +162,19 @@
       border-right: $calendar-border-color-dark $calendar-border-width solid
       border-bottom: $calendar-border-color-dark $calendar-border-width solid
       color: $calendar-text-color-dark
-      background: unset
+      background: $calendar-background-color-dark
 
     &__head-label
       border-right: $calendar-border-color-dark $calendar-border-width solid
       border-bottom: $calendar-border-color-dark $calendar-border-width solid
       color: $calendar-text-color-dark
-      background: unset
+      background: $calendar-background-color-dark
 
     &__resource
       border-bottom: $calendar-border-color-dark $calendar-border-width solid
       border-right: $calendar-border-color-dark $calendar-border-width solid
       color: $calendar-text-color-dark
-      background: unset
+      background: $calendar-background-color-dark
 
     &__resource-interval
       border-bottom: $calendar-border-color-dark $calendar-border-width solid
